fixed a bug of image not scaling properly on small screens

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -426,6 +426,9 @@ body{
         height: 110vh;
         margin-bottom: 0;
     }
+    .bgImgWave{
+        width: 100vw;
+    }
     .Left{
         height: 110vh;
     }
